fixed mobile nav

--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
 
           <div class="nav-links-container">
             <ul>
-              <a href="#"><li>Shop</li></a>
-              <hr />
-              <a href="#"><li>About</li></a>
-              <hr />
-              <a href="#"><li>Contact</li></a>
+              <li><a href="shop.html">Shop</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
